<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
  <item
  	android:id="@+id/menu_instruction"
  	android:title="@string/option_menu_instruction"
  	android:icon="@android:drawable/ic_menu_help"
  	/>
  <item
  	android:id="@+id/menu_share"
  	android:title="@string/option_menu_share"
  	android:icon="@android:drawable/ic_menu_share"
  	/>
  <item
  	android:id="@+id/menu_more"
  	android:title="@string/option_menu_more"
  	android:icon="@android:drawable/ic_menu_more"  	
  	/>
  <item
  	android:id="@+id/menu_rate"
  	android:title="@string/option_menu_rate"
  	android:icon="@android:drawable/ic_menu_compass"
  	/>
  <item
  	android:id="@+id/menu_uninstall_all"
  	android:title="@string/option_menu_uninstall_all"
  	android:icon="@android:drawable/ic_menu_delete"
  	/>  
  <item
  	android:id="@+id/menu_quit"
  	android:title="@string/option_menu_quit"
  	android:icon="@android:drawable/ic_menu_revert"
  	/>
</menu>
